<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="eu.application.twotowers.create.CreatePostViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="356dp"
            android:background="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/enter_the_house_info_that_you_want_to_sell"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.656"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/HouseImage1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription" />

        <ImageView
            android:id="@+id/trash1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/trash_can"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/HouseImage1"
            app:layout_constraintEnd_toEndOf="@+id/HouseImage1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/HouseImage1"
            app:layout_constraintTop_toTopOf="@+id/HouseImage1"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/HouseImage3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/HouseImage2"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription" />

        <ImageView
            android:id="@+id/trash3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/trash_can"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/HouseImage3"
            app:layout_constraintEnd_toEndOf="@+id/HouseImage3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/HouseImage3"
            app:layout_constraintTop_toTopOf="@+id/HouseImage3"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/HouseImage2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/HouseImage1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription" />

        <ImageView
            android:id="@+id/trash2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/trash_can"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/HouseImage2"
            app:layout_constraintEnd_toStartOf="@+id/HouseImage3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/HouseImage1"
            app:layout_constraintTop_toTopOf="@+id/HouseImage2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/AddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/add_photos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription" />

        <Button
            android:id="@+id/Publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddPhoto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/city"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewGov"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@={viewModel.city}"
                android:imeOptions="actionNext"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/number_of_rooms"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewRooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:imeOptions="actionNext"
                android:text="@={viewModel.numRooms}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/number_of_bathrooms"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewBathrooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:imeOptions="actionNext"
                android:text="@={viewModel.numBathrooms}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/property"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewProperty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:imeOptions="actionNext"
                android:text="@={viewModel.property}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/price"
            android:singleLine="true"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:startIconDrawable="@drawable/price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:text="@={viewModel.price}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutArea"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/area"
            android:singleLine="true"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPrice"
            app:startIconDrawable="@drawable/area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:text="@={viewModel.area}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:singleLine="true"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutArea"
            app:startIconDrawable="@drawable/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:text="@={viewModel.description}"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>